# src/entity/Project.ts
@@ -34,8 +34,8 @@ export class Project {
     })
     skills?:Promise<Skill[]>
 
-    @OneToMany(() => (Task), (Task) => { Task.project }, { onUpdate: "CASCADE", onDelete: "CASCADE", nullable: true })
-    tasks?:Task[]
+    @OneToMany(() => (Task), (Task) => { Task.project }, { onUpdate: "CASCADE", onDelete: "CASCADE", nullable: true, eager: true })
+    tasks?: Promise<Task[]>
 
     @ManyToMany(() => (Employee), (Employee) => { Employee.project }, { onUpdate: "CASCADE", onDelete: "CASCADE", nullable: true })
     @JoinTable({
